attempt to start emulator on higher version of java